fix(modal): Fixed modal styling in logo grid per design feedback.
* fix(): Tweaked logo grid for design feedback.

* fix(): Tweaked logo grid modal.

* fix(storybook): Changed grid view to 12-columns.

* fix(grid): Tweaked md and lg breakpoint widths.

* fix(): Updated logo grid with new logos.

* Ran prettier on logo grid story.

* Fixed logo ratios

* Fixed logo grid modal columns on lg breakpoint.

* fix(modal): Tweaked the modal to the updated design spec.

* fixed modal overflow scrollbars.

--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -17,11 +17,11 @@
           @content;
         }
       } @else if $bp == md {
-        @media (min-width: 673px) and (max-width: 1055px) {
+        @media (min-width: 673px) and (max-width: 1183px) {
           @content;
         }
       } @else if $bp == lg {
-        @media (min-width: 1056px) and (max-width: 1311px) {
+        @media (min-width: 1184px) and (max-width: 1311px) {
           @content;
         }
       } @else if $bp == xlg {
